--- a/style.css
+++ b/style.css
@@ -1,9 +1,17 @@
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:opsz@9..40&family=Inter:wght@200;400&display=swap");
+
 body {
   margin: 0;
-  font-family: Arial, sans-serif;
+  font-family: "DM Sans", sans-serif;
+  font-family: "Inter", sans-serif;
+  font-size: 1.2rem;
 }
 
 nav {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  overflow: hidden;
   background-color: #6f6af7;
   width: 100%;
   height: 10vh;
@@ -18,18 +26,27 @@ nav > div {
 }
 
 nav a {
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   color: white;
   padding: 0 16px;
   text-decoration: none;
 }
 nav input {
-  /* border */
+  height: 35px;
+  width: 200px;
+  border-radius: 25px;
+  border-style: none;
+  color: #9f9f9f;
+  font-size: 1.1rem;
+}
+nav input::placeholder {
+  padding-left: 12px;
 }
 /* test styling */
-/* div {
-  border: solid 2px black;
-} */
+div {
+  border-radius: 15px;
+  /* border: solid 2px black; */
+}
 .container {
   display: flex;
   justify-content: center;
@@ -43,7 +60,6 @@ nav input {
   justify-items: center;
 }
 .top {
-  /* height: 80%; */
   width: 100%;
   display: flex;
   margin-bottom: 7%;
@@ -53,12 +69,18 @@ nav input {
   display: flex;
   justify-content: center;
   align-items: center;
+  border-radius: 15px;
+  box-shadow: 4px 7px 32px 0px #00000070;
 }
 .top-right {
+  color: #6f7373;
   margin-left: 6%;
   width: 75%;
-  /* height: 80%; */
   background-color: #e5d8ff;
+  box-shadow: 1px 3px 15px 0px #00000040 inset;
+}
+.top-right > p {
+  margin: 5%;
 }
 .middle {
   width: 100%;
@@ -69,9 +91,14 @@ nav input {
 .middle > div {
   height: 90px;
   width: 200px;
+  border-radius: 9px;
   display: flex;
   justify-content: start;
   align-items: center;
+  box-shadow: 0px 9px 31px 0px #00000066;
+}
+.middle > div > p {
+  margin-left: 7%;
 }
 .md1 {
   background-color: #929dff;
@@ -107,7 +134,7 @@ nav input {
 .b-left > div {
   height: 80px;
   width: 250px;
-  border: solid 2px white;
+  border: solid 3px white;
   color: white;
   display: flex;
   justify-content: center;
@@ -115,12 +142,22 @@ nav input {
 }
 .b-right {
   background-color: white;
+
   width: 70%;
   margin: 2% 2% 2% 0;
 }
 .b-right > div {
+  margin: 7%;
 }
 button {
+  font-size: 1.2rem;
+  height: 55px;
+  width: 120px;
+  border-radius: 9px;
   background-color: black;
   color: white;
+}
+button > img {
+  height: auto;
+  max-width: 30%;
 }
