--- a/style.css
+++ b/style.css
@@ -144,6 +144,7 @@ p {
 }
 .bottom {
   width: 100%;
+  height: 470px;
   background-color: #483eff;
   display: flex;
   justify-content: space-around;
@@ -152,7 +153,8 @@ p {
 .b-left {
   padding: 2%;
   width: 30%;
-  height: 500px;
+
+  font-weight: bold;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -181,6 +183,9 @@ p {
 .b-right > div > p {
   line-height: 2.2;
   color: #143565;
+}
+.b-right > div > h2 {
+  font-weight: bolder;
 }
 button {
   font-size: 1.2rem;
